# unith-task

./: .env.example  .gitignore  Dockerfile  Dockerfile.receiver  README.md  docker-compose.yml  pyproject.toml
app/: README.md  broker.py  config.py  main.py  metrics.py
app/api/: README.md  deliveries.py  events.py  router.py  subscribers.py
app/consumer/: README.md  rabbitmq.py
app/db/: README.md  models.py  session.py
app/delivery/: README.md  sender.py  signing.py  worker.py
app/enricher/: README.md  __init__.py  base.py  mock_llm.py  openai_llm.py
app/schemas/: README.md  delivery.py  event.py  subscriber.py
receiver/: README.md  main.py
scripts/: README.md  e2e_test.py  publish_events.py  start.sh  stop.sh
tests/: README.md  conftest.py
tests/integration/: README.md  conftest.py  test_delivery_retry.py  test_pipeline_e2e.py
tests/unit/: README.md  test_backoff.py  test_enricher.py  test_idempotency_logic.py  test_signing.py
